# fngr

./: .gitignore  Cargo.toml  README.md  finger.config  users.list
src/: lib.rs  main.rs  userlist.rs
src/fingr-server/: config.rs  main.rs  old.rs  prelude.rs  userlist.rs
src/fingr-server/networking/: mod.rs  request.rs  response.rs  status.rs
src/networking/: request.rs  response.rs
